--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.1.1",
     "@next/font": "13.1.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "dotenv": "^16.0.3",
     "eslint-config-next": "13.1.1",
+    "mongodb": "^4.13.0",
     "next": "13.1.1",
-    "next-auth": "^4.18.8",
+    "next-auth": "^4.18.10",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^2.0.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.48.0",
