--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.3",
     "eslint-config-next": "13.1.1",
     "mongodb": "^4.13.0",
+    "mongoose": "^6.9.1",
     "next": "13.1.1",
     "next-auth": "^4.18.10",
     "react": "18.2.0",
