--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.1",
     "@next/font": "13.1.1",
-    "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "dotenv": "^16.0.3",
     "eslint-config-next": "13.1.1",
-    "mongodb": "^4.13.0",
+    "mongodb": "^4.14.0",
     "mongoose": "^6.9.1",
     "next": "13.1.1",
     "next-auth": "^4.18.10",
@@ -25,6 +24,7 @@
     "swr": "^2.0.1"
   },
   "devDependencies": {
+    "@types/node": "^18.13.0",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
     "autoprefixer": "^10.4.13",
