--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.1",
     "@next/font": "13.1.1",
+    "@types/dompurify": "^2.4.0",
+    "@types/marked": "^4.0.8",
+    "@types/prismjs": "^1.26.0",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "dompurify": "^3.0.0",
     "dotenv": "^16.0.3",
     "eslint-config-next": "13.1.1",
+    "marked": "^4.2.12",
     "mongodb": "^4.14.0",
     "mongoose": "^6.9.1",
     "next": "13.1.1",
     "next-auth": "^4.19.2",
+    "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "^2.0.1"
