--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dompurify": "^3.0.0",
     "dotenv": "^16.0.3",
     "eslint-config-next": "13.1.1",
+    "github-markdown-css": "^5.2.0",
     "marked": "^4.2.12",
     "mongodb": "^4.14.0",
     "mongoose": "^6.9.1",
