--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^6.9.1",
     "next": "13.1.1",
     "next-auth": "^4.19.2",
+    "nodemailer": "^6.9.1",
     "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.13.0",
+    "@types/nodemailer": "^6.4.7",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
     "autoprefixer": "^10.4.13",
