--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@next-auth/mongodb-adapter": "^1.1.1",
     "@next/font": "13.1.1",
     "@types/dompurify": "^2.4.0",
+    "@types/ejs": "^3.1.2",
     "@types/marked": "^4.0.8",
     "@types/prismjs": "^1.26.0",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "dompurify": "^3.0.0",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "eslint-config-next": "13.1.1",
     "github-markdown-css": "^5.2.0",
     "marked": "^4.2.12",
